# algotrader

./: .gitignore  README.md  engine.py  explore.ipynb  lab  reconstruct.py  requirements.txt  simple_spec.md  strategy.py
bot/: backtest_bounds.py  backtest_mean_rev_bb.py  backtest_mean_rev_ewm.py  backtest_mean_rev_z.py  backtest_stats.py  candles.py  charts.py  config.py  cv.py  diagnostics.py  download_candles.py  feature_generator.py  feature_selector.py  features.py  find_figi.py  model.py  optimizer.py  runner.py  train_lgbm.py  tuner.py
bot2/: backtest.py  charts.py  optimizer.py  runner.py
trading_bot/: .env.example  README.md  pyproject.toml
trading_bot/config/: config.yaml
trading_bot/src/: cli.py  config.py
trading_bot/src/analytics/: charts.py  compare.py  metrics.py  reconstruct.py
trading_bot/src/backtest/: loader.py  simulator.py  splits.py
trading_bot/src/broker/: client.py  market_data.py  orders.py
trading_bot/src/core/: candles.py  indicators.py  session.py  types.py
trading_bot/src/live/: event_log.py  executor.py  runner.py  state.py
trading_bot/tests/: helpers.py  run_tests.py  test_candles.py  test_engine.py  test_indicators.py  test_reconstruct.py  test_session.py  test_simulator.py  test_splits.py  test_strategy.py
