[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.0.0"
description = "Trend-filtered mean-reversion trading bot for the T-Bank Invest API, with a parity backtester."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tinkoff-invest>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
trading-bot = "src.cli:main"

[tool.setuptools]
packages = [
    "src",
    "src.core",
    "src.broker",
    "src.live",
    "src.backtest",
    "src.analytics",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
